<resources>
    <string name="app_name">Testing 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ruthvik Bemidi</string>
    <string name="nav_header_subtitle">www.ruthvik4215.github.io/ml-blog</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_sms_mms">SMS and MMS</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_privacy">privacy</string>
    <string name="menu_appearance">Appearance</string>
    <string name="menu_chats">Chats</string>
    <string name="menu_data_and_storage">Data and Storage</string>
    <string name="menu_linked_devices">Linked devices</string>
    <string name="menu_help">Help</string>
    <string name="menu_advanced">Advanced</string>

    <string name="menu_sub_sms">on</string>
    <string name="menu_sub_notifications">on</string>
    <string name="menu_sub_privacy">Screen lock off, Registration lock off</string>
    <string name="menu_sub_appearance">Theme System default, language System default</string>
</resources>