<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_sms_mms"
        android:name="com.example.testing3.ui.home.HomeFragment"
        android:label="@string/menu_sms_mms"
        tools:layout="@layout/fragment_sms_mms" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.testing3.ui.gallery.GalleryFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_privacy" />

    <fragment
        android:id="@+id/nav_appearance"
        android:name="com.example.testing3.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_privacy"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_chats"
        android:name="com.example.testing3.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_privacy"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_data_and_storage"
        android:name="com.example.testing3.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_privacy"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_linked_devices"
        android:name="com.example.testing3.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_privacy"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.testing3.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_privacy"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_advanced"
        android:name="com.example.testing3.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_privacy"
        tools:layout="@layout/fragment_notifications" />

</navigation>